// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders a search component 1`] = `
<div
  className="ui container"
  id="page-search"
>
  <div
    className="container"
  >
    <article
      id="content"
    >
      <header>
        <h1
          className="documentFirstHeading"
        >
          Search results for 
          <q>
            blog
          </q>
        </h1>
        <div>
          No results found
        </div>
      </header>
      <section
        id="content-core"
      >
        <article
          className="tileItem"
        >
          <h2
            className="tileHeadline"
          />
          <div
            className="tileBody"
          >
            <span
              className="description"
            >
              My blog
            </span>
          </div>
          <div
            className="tileFooter"
          />
          <div
            className="visualClear"
          />
        </article>
      </section>
    </article>
  </div>
  <div
    id="Portal"
  />
</div>
`;

exports[`Search renders an empty search component 1`] = `
<div
  className="ui container"
  id="page-search"
>
  <div
    className="container"
  >
    <article
      id="content"
    >
      <header>
        <h1
          className="documentFirstHeading"
        >
          Search results for 
          <q>
            blog
          </q>
        </h1>
        <div>
          No results found
        </div>
      </header>
      <section
        id="content-core"
      />
    </article>
  </div>
  <div
    id="Portal"
  />
</div>
`;
